# bas-python-api

./: .gitattributes  .gitignore  BAS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
bas_api/: __init__.py  api.py  client.py  settings.py  transport.py
bas_api/browser/: __init__.py  api.py  client.py  exceptions.py  gui.py
bas_api/models/: __init__.py  cookies.py
bas_api/network/: __init__.py  api.py  client.py
bas_api/waiters/: __init__.py  api.py  exceptions.py
bas_client/: __init__.py  client.py  exceptions.py  function.py  settings.py  transport.py  typing.py  utils.py
bas_client/browser/: __init__.py  client.py  exceptions.py  gui.py
bas_client/models/: __init__.py  browser.py  cookies.py  network.py
bas_client/network/: __init__.py  client.py
bas_client/waiters/: __init__.py  api.py  client.py
docs/: BasPythonApi.xml
examples/: .env.example  one.py  set_visible.py
tests/: __init__.py  conftest.py
tests/fixtures/cookies/: 1.json  collected.json
tests/fixtures/network/: collected.json
tests/functional/: __init__.py  conftest.py  test_api_basic.py  test_bas_api.py  test_bas_api_basic.py  test_bas_api_network.py  test_bas_client.py  test_browser.py  test_network.py  tools.py  utils.py
tests/unit/: test_models.py  test_other.py
tools/: __init__.py  collect_cookies.py  collect_network_cache.py
